WIP OKafka Examples Admin
Signed-off-by: Paulo Alberto Simoes <paulo.simoes@oracle.com>